{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 156,
  "lineage": "294d297e-0bb5-bbbd-7ab6-d876b802dfee",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "tf_nic1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/5896b703-47bb-4b3c-b893-8794e86d7763/resourceGroups/mediawiki-rg/providers/Microsoft.Network/networkInterfaces/nic1",
            "internal_domain_name_suffix": "2abffmk5syauhfb14qgcbwgikd.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "nic1_ip_config",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/5896b703-47bb-4b3c-b893-8794e86d7763/resourceGroups/mediawiki-rg/providers/Microsoft.Network/publicIPAddresses/vm_pub_ip",
                "subnet_id": "/subscriptions/5896b703-47bb-4b3c-b893-8794e86d7763/resourceGroups/mediawiki-rg/providers/Microsoft.Network/virtualNetworks/vnet1/subnets/subnet1"
              }
            ],
            "location": "eastus",
            "name": "nic1",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "mediawiki-rg"
          },
          "dependencies": [
            "azurerm_public_ip.tf_pub_ip1",
            "azurerm_resource_group.tf_rg1",
            "azurerm_subnet.tf_subnet1",
            "azurerm_virtual_network.tf_vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "tf_con1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5896b703-47bb-4b3c-b893-8794e86d7763/resourceGroups/mediawiki-rg/providers/Microsoft.Network/networkInterfaces/nic1|/subscriptions/5896b703-47bb-4b3c-b893-8794e86d7763/resourceGroups/mediawiki-rg/providers/Microsoft.Network/networkSecurityGroups/nsg1",
            "network_interface_id": "/subscriptions/5896b703-47bb-4b3c-b893-8794e86d7763/resourceGroups/mediawiki-rg/providers/Microsoft.Network/networkInterfaces/nic1",
            "network_security_group_id": "/subscriptions/5896b703-47bb-4b3c-b893-8794e86d7763/resourceGroups/mediawiki-rg/providers/Microsoft.Network/networkSecurityGroups/nsg1"
          },
          "dependencies": [
            "azurerm_network_interface.tf_nic1",
            "azurerm_network_security_group.tf_nsg1",
            "azurerm_public_ip.tf_pub_ip1",
            "azurerm_resource_group.tf_rg1",
            "azurerm_subnet.tf_subnet1",
            "azurerm_virtual_network.tf_vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "tf_nsg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5896b703-47bb-4b3c-b893-8794e86d7763/resourceGroups/mediawiki-rg/providers/Microsoft.Network/networkSecurityGroups/nsg1",
            "location": "eastus",
            "name": "nsg1",
            "resource_group_name": "mediawiki-rg",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.tf_rg1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "tf_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "Allow inbound http",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/5896b703-47bb-4b3c-b893-8794e86d7763/resourceGroups/mediawiki-rg/providers/Microsoft.Network/networkSecurityGroups/nsg1/securityRules/HTTP",
            "name": "HTTP",
            "network_security_group_name": "nsg1",
            "priority": 200,
            "protocol": "tcp",
            "resource_group_name": "mediawiki-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.tf_nsg1",
            "azurerm_resource_group.tf_rg1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "tf_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "Allow inbound ssh",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/5896b703-47bb-4b3c-b893-8794e86d7763/resourceGroups/mediawiki-rg/providers/Microsoft.Network/networkSecurityGroups/nsg1/securityRules/SSH",
            "name": "SSH",
            "network_security_group_name": "nsg1",
            "priority": 100,
            "protocol": "tcp",
            "resource_group_name": "mediawiki-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.tf_nsg1",
            "azurerm_resource_group.tf_rg1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "tf_pub_ip1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "availability_zone": "No-Zone",
            "id": "/subscriptions/5896b703-47bb-4b3c-b893-8794e86d7763/resourceGroups/mediawiki-rg/providers/Microsoft.Network/publicIPAddresses/vm_pub_ip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "vm_pub_ip",
            "resource_group_name": "mediawiki-rg",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.tf_rg1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "tf_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/5896b703-47bb-4b3c-b893-8794e86d7763/resourceGroups/mediawiki-rg/providers/Microsoft.Network/virtualNetworks/vnet1/subnets/subnet1",
            "name": "subnet1",
            "resource_group_name": "mediawiki-rg",
            "virtual_network_name": "vnet1"
          },
          "dependencies": [
            "azurerm_resource_group.tf_rg1",
            "azurerm_virtual_network.tf_vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "tf_vnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "b15202e0-965f-4301-943b-f40c20d8c853",
            "id": "/subscriptions/5896b703-47bb-4b3c-b893-8794e86d7763/resourceGroups/mediawiki-rg/providers/Microsoft.Network/virtualNetworks/vnet1",
            "location": "eastus",
            "name": "vnet1",
            "resource_group_name": "mediawiki-rg",
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.tf_rg1"
          ]
        }
      ]
    }
  ]
}